# DanubeDataflow

./: LICENSE  pyproject.toml
src/danube_dataflow/: main.py
src/danube_dataflow/config/: urls.py
src/danube_dataflow/gui/: main_window.py
src/danube_dataflow/models/: Deputy.py  Senators.py
src/danube_dataflow/scrappers/: deputies_scraper.py  senators_scraper.py
src/danube_dataflow/utils/: helpers.py  tls_adapter.py
