[project]
name = "danube-dataflow"
version = "0.1.0"
description = "Web scraping and data engineering pipeline using Python, PostgreSQL and AWS"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Dragos-Gabriel Enache", email = "edragosgabriel@gmail.com" }
]

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "lxml>=6.0.2,<7.0.0",
    "pandas>=3.0.0,<4.0.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "boto3>=1.42.47,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "unidecode (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "danube_dataflow", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
